[tool.poetry]
name = "vrchat-gym"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "vrchat_gym"}]

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = "^0.28.1"
vrchat-io = {git = "https://github.com/Geson-anko/vrchat-io.git", rev = "main"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pre-commit = "^3.3.3"
pytest-slow = "^0.0.3"
pytest-cov = {extras = ["toml"], version = "^4.1.0"}
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
